manifests/website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: website
  name: website
spec:
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - image: ghcr.io/openlab-aux/website:main
          name: website
          ports:
            - containerPort: 80
        imagePullPolicy: Always
        resources:
          requests:
            memory: 256M
            cpu: 256m
          limits:
            memory: 512M
            cpu: 512m
