manifests/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: website
  name: website
spec:
  ports:
    - name: web
      port: 4321
      protocol: TCP
      targetPort: 4321
  selector:
    app: website
  type: ClusterIP
