manifests/website/api_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  annotations:
    cert-manager.io/cluster-issuer: le-prod
    nginx.ingress.kubernetes.io/rewrite-target:  /api/api.json
spec:
  ingressClassName: nginx
  rules:
    - host: "api.openlab-augsburg.de"
      http:
        paths:
          - path: /data.json
            backend:
              service:
                name: website
                port:
                  name: web
            pathType: Prefix
  tls:
    - hosts:
        - "api.openlab-augsburg.de"
      secretName: api-cert
